# repo_helper_github

./: .bumpversion.cfg  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  __pkginfo__.py  formate.toml  pyproject.toml  repo_helper.yml  requirements.txt  setup.cfg  setup.py  stubs.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml  python_ci_macos.yml
doc-source/: Source.rst  api.rst  conf.py  contrib.rst  contributing.rst  index.rst  installation.rst  license.rst  local_extension.py  requirements.txt  sphinx_click_tweak.py  usage.rst
doc-source/_templates/sidebar/: navigation.html
doc-source/api/: exceptions.rst  options.rst  repo_helper_github.rst
repo_helper_github/: __init__.py  _github.py  _types.py  cli.py  exceptions.py  options.py  secret_validation.py
tests/: conftest.py  requirements.txt  test_create_labels.py  test_create_repo.py  test_exceptions.py  test_helpers.py  test_protect_branch.py  test_secrets.py  test_update.py
tests/cassettes/: assert_org_member.json  creation.json  protect_branch.json  rate_limit.json  secrets.json  test_assert_org_member.json  test_create_labels.json  test_create_repo.json  test_protect_branch.json  test_rate_limit.json  test_secrets.json  test_update.json  test_update_topics.json  update.json  update_topics.json
tests/test_create_labels_/: test_via_cli.md
tests/test_create_repo_/: test_via_cli.md
tests/test_helpers_/: test_assert_org_member.md  test_rate_limit.txt
tests/test_secrets_/: test_via_cli.md
tests/test_update_/: test_via_cli.md
