[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "repo_helper_github"
version = "0.6.0"
description = "Manage GitHub repositories with repo-helper."
readme = "README.rst"
keywords = [ "github", "repo-helper",]
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
email = "dominic@davis-foster.co.uk"
name = "Dominic Davis-Foster"


[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/repo-helper/repo_helper_github"
"Issue Tracker" = "https://github.com/repo-helper/repo_helper_github/issues"
"Source Code" = "https://github.com/repo-helper/repo_helper_github"
Documentation = "https://repo_helper_github.readthedocs.io/en/latest"

[tool.dep_checker]
allowed_unused = [ "cryptography",]

[tool.mkrecipe]
conda-channels = [ "repo-helper",]
extras = "all"
license-key = "MIT"

[tool.whey]
base-classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
    "Typing :: Typed",
]
python-versions = [ "3.6", "3.7", "3.8", "3.9",]
python-implementations = [ "CPython", "PyPy",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[project.entry-points."repo_helper.command"]
repo_helper_github = "repo_helper_github.cli:github"

[tool.dep_checker.name_mapping]
github3_py = "github3"
